# object_tracking_toss

./: CMakeLists.txt  README.md
aliases/: conveyor_box.in.yaml
etc/: ObjectTrackingToss.in.yaml
meshes/conveyor_box/: conveyor_box.stl
rsdf/conveyor_box/: conveyor_box.rsdf
rsdf/vi_testbench/: vi_testbench.rsdf
scripts/etc/: display.rviz  display_frames.rviz
src/: CMakeLists.txt  ObjectTrackingToss.cpp  ObjectTrackingToss.h  api.h  lib.cpp
src/states/: BoxToss.cpp  BoxToss.h  CMakeLists.txt  GrabBox.cpp  GrabBox.h  MoveToNeutral.cpp  MoveToNeutral.h  MoveToStart.cpp  MoveToStart.h  ObjectTrackingToss_Initial.cpp  ObjectTrackingToss_Initial.h  RecordRobotTeleoperation.cpp  RecordRobotTeleoperation.h  TerminateProcess.cpp  TerminateProcess.h
src/states/counter/: multivariablePickPos.csv
urdf/: box1.urdf  box2.urdf  box3.urdf  box4.urdf  box5.urdf  conveyor_box.urdf  vi_testbench.urdf
